# CMC_invivo_dMRI_pipeline

./: README.md  easy_template.yaml  expert_template.yaml  invivo_data_prep.sh  invivo_hum_data_prep.sh  pyproject.toml  remove_initial_b0s.py
src/invivo_dmri_pipeline/: bootstrap.py  cli.py  config.py  pipeline.py
src/invivo_dmri_pipeline/files/: b02b0_UHF_1.cnf  b02b0_UHF_2.cnf  b02b0_UHF_4.cnf  mmorf_config_template.ini
src/invivo_dmri_pipeline/files/requirements/: py310.txt  py311.txt
src/invivo_dmri_pipeline/nodes/: Gibbs_N4.py  __init__.py  bedpostx_xtract.py  bvals_round.py  combine.py  denoise.py  drift.py  drift_assess.py  drift_wrap.py  dti_and_reg.py  invivo_combine.py  prep_dmri_reorient.py  qa_report.py  reg2std.py  remove_initial_b0.py  skullstrip.py  topup_eddy.py  tract_viewer.py
src/invivo_dmri_pipeline/utils/: __init__.py  external.py
tests/: example_config.yaml
