[project]
name = "invivo-dmri-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  'scipy>=1.10,<1.16; python_version < "3.11"',
  'scipy>=1.16.1; python_version >= "3.11"',
  "pandas>=2.0",
  "nipype>=1.10.0",
  "nibabel>=5.1",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.20",
  "tqdm>=4.66",
  "pyyaml>=6.0",
]

[project.scripts]
cmc_invivo_pipeline = "invivo_dmri_pipeline.bootstrap:entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["invivo_dmri_pipeline"]

[tool.setuptools.package-data]
invivo_dmri_pipeline = ["files/**"]
